--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -1648,6 +1648,7 @@ In \cref{sec:cellularDiagonals}, we first recall the definition and some know fa
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\newpage
 \section{Cellular diagonals}
 \label{sec:cellularDiagonals}
 
@@ -2496,9 +2497,18 @@ Then, for any $i \in I,j \in J$, we have that $I\setminus i$ dominates $J\setmin
 
 We are now ready for the characterization. 
 
+\begin{definition}
+    A \defn{pattern-avoiding permutation} is ...
+    A \defn{pattern-avoiding pair of permutations} is...
+\end{definition}
+
+\begin{example}
+    Pairs of permutations avoiding $(21,12)$ are precisely intervals of the weak Bruhat order. 
+\end{example}
+
 \begin{theorem}
 \label{prop: LAD Fish Pattern}
-A pair of permutations of $[n]$ is in the $\LA$ (resp. $\SU$) diagonal if and only if for any~$k\geq 1$ and for any $(I,J) \in \LA(n)$ (resp. $\SU(n)$) of size $|I|=|J|=k$ it avoids the pattern 
+A pair of permutations of $[n]$ is in the $\LA$ (resp. $\SU$) diagonal if and only if for any~$k\geq 1$ and for any $(I,J) \in \LA(n)$ (resp. $\SU(n)$) of size $|I|=|J|=k$ it avoids the patterns 
 \begin{align}
     (j_1 i_1 j_2 i_2 \cdots j_k i_k,\ i_2 j_1 i_3 j_2 \cdots i_k j_{k-1} i_1 j_k) \ , \tag{LA} \label{eq:pattern} \\
     \text{ resp. } (j_1 i_1 j_2 i_2 \cdots j_k i_k, \ i_1 j_k i_2 j_1 \cdots i_{k-1} j_{k-2}i_k j_{k-1}) \ , \tag{SU}
@@ -2576,6 +2586,7 @@ However, as $j_k$ must be dominated by an element of $I$, this forces $w = i_1$ 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\newpage
 \section{Shifts and the lattice of facets}
 \label{sec:shifts}
 
@@ -2694,10 +2705,7 @@ while the \defn{left $m$-shift} moves it $m$ blocks to the left
         \item $\min \sigma_i \notin M_i$ (resp.~$\min \tau_{i} \notin M_i$), and
         \item $\min M_i> \max \sigma_{i+m}$ (resp.~$\min M_{i}> \max \tau_{i-m}$).
     \end{enumerate}
-    It is \defn{$m$-path movable} if it satisfies $(1)$ above together with
-    \begin{enumerate}
-        \item[(2')] $\min M_i> \max \sigma_{i,i+m}$ (resp.~$\min M_{i}> \max \tau_{i,i-m}$).
-    \end{enumerate}
+    It is \defn{$m$-path movable} if $\min M_i> \max \sigma_{i,i+m}$ (resp.~$\min M_{i}> \max \tau_{i,i-m}$).
 \end{definition}
 
 \begin{example}
